# dzielo-ai

./: .env-example  .pre-commit-config.yaml  README.md  pyproject.toml
dzielo_ai/: create.py
prompts/: tasks_rewriter.txt
